syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpcdemo.proto";
option java_outer_classname = "ReportProto";

package report;

service ReportService {
  rpc GenerateReport(GenerateReportRequest) returns (ReportResponse);
  rpc GetReport(GetReportRequest) returns (ReportResponse);
}

message GenerateReportRequest {
  string interviewId = 1;
}

message GetReportRequest {
  string reportId = 1;
}

message ReportResponse {
  string reportId = 1;
  string interviewId = 2;
  string content = 3;
  float score = 4;
  string evaluatorComment = 5;
  int64 createdAt = 6;
}
